--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.0",
+    "react-intersection-observer": "^9.10.3",
     "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-spring": "^9.7.3",
     "react-tooltip": "^5.15.0",
     "react-type-animation": "^3.1.0",
     "web-vitals": "^2.1.4"
