--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^10.12.16",
+    "i18next": "^23.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.0",
+    "react-i18next": "^14.1.2",
     "react-intersection-observer": "^9.10.3",
     "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
